--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -107,7 +107,7 @@
   </style>
 </head>
 
-<body>
+<body style="background-color: #f8f9fa;">
 
   <div class="message-container" id="system-messages">
     {% for message in messages %}
