--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -11,8 +11,8 @@
       {% endif %}
 
       
-        <img src="{% static 'assets/img/logo.png'%}" alt="">
-        <span class="d-none d-lg-block">MUTSO</span>
+        <img src="{% static 'assets/img/coca-cola-logo.png'%}" alt="">
+        <span class="d-none d-lg-block">COKE</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
