--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -126,11 +126,11 @@
             <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
               <div class="d-flex justify-content-center py-4">
-                <a href="{% url 'login' %}" class="logo d-flex align-items-center w-auto">
+                <a href="{% url 'login'%}" class="logo d-flex align-items-center w-auto">
                   <img src="{% static 'assets/img/coca-cola-logo.png' %}" alt="" style="max-width: 80px; max-height: 80px;">
-                  <span class="d-none d-lg-block">Employee Portal</span>
+                  <span class="d-none d-lg-block">COCA-COLA</span>
                 </a>
-              </div>
+              </div><!-- End Logo -->
 
               <div class="card mb-3">
                 <div class="card-body">
