--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -6,17 +6,31 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>{% block title %}Muranga University Students Portal{% endblock %}</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>{% block title %}Coca Cola Company - Refreshing the World{% endblock %}</title>
+  <meta name="description" content="Welcome to Coca Cola Company - Explore our beverages, careers, innovations, and sustainability efforts.">
+  <meta name="keywords" content="Coca Cola, Beverages, Soft Drinks, Company, Careers, Refresh, Soda, Sustainability">
+  <meta name="author" content="Coca Cola Company">
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Coca Cola Company - Refreshing the World">
+  <meta property="og:description" content="Explore Coca Cola's wide range of beverages and our global impact.">
+  <meta property="og:image" content="{% static 'assets/img/coca-cola-logo.png' %}">
+  <meta property="og:url" content="https://www.coca-cola.com/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Coca Cola Company">
+  <meta name="twitter:description" content="Discover Coca Cola's products, services, and sustainability mission.">
+  <meta name="twitter:image" content="{% static 'assets/img/coca-cola-logo.png' %}">
 
   <!-- Favicons -->
-  <link href="{% static 'assets/img/logo.png'%}" rel="icon">
-  <link href="{% static 'assets/img/logo.png'%}" rel="apple-touch-icon">
+  <link href="{% static 'assets/img/coca-cola-logo.png' %}" rel="icon">
+  <link href="{% static 'assets/img/coca-cola-logo.png' %}" rel="apple-touch-icon"> 
 
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Nunito:300,400,600,700|Poppins:300,400,500,600,700" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css'%}" rel="stylesheet">
@@ -28,30 +42,28 @@
   <link href="{% static 'assets/vendor/simple-datatables/style.css'%}" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-  <!-- Bootstrap JS (Include this just before the closing </body> tag) -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-<!--view pdf -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  <!-- Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.4.3/echarts.min.js"></script>
+  <!-- PDF.js and Charts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.4.3/echarts.min.js"></script>
 
-
-  <!-- Template Main CSS File -->
+  <!-- Template Main CSS & JS -->
   <link href="{% static 'assets/css/style.css'%}" rel="stylesheet">
   <link href="{% static 'assets/css/extra.css'%}" rel="stylesheet">
   <link href="{% static 'assets/css/messages.css'%}" rel="stylesheet">
   <script src="{% static 'assets/js/messages.js'%}"></script>
-
 </head>
+
   <body>
     {% include "base/navbar.html" %}
 
     {% if request.user.user_type == 'admin' %}
         {% include "base/sidebars/admin_sidebar.html" %}
-    {% elif request.user.user_type == 'staff' %}
-        {% include "base/sidebars/staff_sidebar.html" %}
+    {% elif request.user.user_type == 'employee' %}
+        {% include "base/sidebars/employee_sidebar.html" %}
     {% elif request.user.user_type == 'finance' %}
         {% include "base/sidebars/finance_sidebar.html" %}
     {% elif request.user.user_type == 'lecturer' %}
