--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -12,7 +12,7 @@
 
       
         <img src="{% static 'assets/img/coca-cola-logo.png'%}" alt="">
-        <span class="d-none d-lg-block">COKE</span>
+        <span class="d-none d-lg-block">COCA COLA </span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
